update readme file

--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
       margin: 0 auto;
       border: 1px solid #eeeeee;
       box-sizing: border-box;
+      outline: none;
     }
   </style>
 </head>
