build: add style lint config file

--- a/example/index.html
+++ b/example/index.html
@@ -11,11 +11,12 @@
       padding: 0;
     }
     #editor {
-      width: 750px;
+      box-sizing: border-box;
+      width: 800px;
       height: 100vh;
       margin: 0 auto;
-      border: 1px solid #eeeeee;
-      box-sizing: border-box;
+
+      border: 1px solid #eee;
       outline: none;
     }
   </style>
