--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,8 @@
       height: 100vh;
       margin: 0 auto;
 
+      font-size: 16px;
+
       border: 1px solid #eee;
       outline: none;
     }
