--- a/example/index.html
+++ b/example/index.html
@@ -12,13 +12,12 @@
     }
     #editor {
       box-sizing: border-box;
-      width: 800px;
+      width: 100%;
       height: 100vh;
-      margin: 0 auto;
+      overflow-y: auto;
 
       font-size: 16px;
-
-      border: 1px solid #eee;
+      
       outline: none;
     }
   </style>
