feat: add history module

--- a/example/index.html
+++ b/example/index.html
@@ -23,6 +23,10 @@
   </style>
 </head>
 <body>
+  <div class="tools">
+    <button id="undo">UNDO</button>
+    <button id="redo">REDO</button>
+  </div>
   <div id="editor"></div>
 </body>
 </html>
