feat: search module - search method

--- a/example/index.html
+++ b/example/index.html
@@ -20,12 +20,21 @@
       
       outline: none;
     }
+    #search {
+      width: 200px;
+      height: 18px;
+
+      border: 1px slid #eee;
+      border-radius: 4px;
+      outline: none;
+    }
   </style>
 </head>
 <body>
   <div class="tools">
     <button id="undo">UNDO</button>
     <button id="redo">REDO</button>
+    <input type="text" id="search">
   </div>
   <div id="editor"></div>
 </body>
