feat: search module - find method

--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,8 @@
     <button id="undo">UNDO</button>
     <button id="redo">REDO</button>
     <input type="text" id="search">
+    <button id="previous">Previous</button>
+    <button id="next">Next</button>
   </div>
   <div id="editor"></div>
 </body>
