--- a/example/index.html
+++ b/example/index.html
@@ -37,6 +37,9 @@
     <input type="text" id="search">
     <button id="previous">Previous</button>
     <button id="next">Next</button>
+    <input type="text" id="replace">
+    <button id="single">Single</button>
+    <button id="all">All</button>
   </div>
   <div id="editor"></div>
 </body>
