feat: add setContent api

--- a/example/index.html
+++ b/example/index.html
@@ -40,6 +40,7 @@
     <input type="text" id="replace">
     <button id="single">Single</button>
     <button id="all">All</button>
+    <button id="set-content">Set Content</button>
   </div>
   <div id="editor"></div>
 </body>
