feat: select all

--- a/example/index.html
+++ b/example/index.html
@@ -41,6 +41,7 @@
     <button id="single">Single</button>
     <button id="all">All</button>
     <button id="set-content">Set Content</button>
+    <button id="select-all">Select All</button>
   </div>
   <div id="editor"></div>
 </body>
