fix: #58 large white space in firefox

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Muya Development</title>
   <style>
+    @supports(-moz-appearance:none) {
+      /* CSS code */
+      html {
+        position: fixed;
+      }
+    }
     html,
     body {
       margin: 0;
