--- a/examples/index.html
+++ b/examples/index.html
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muya Example</title>
-</head>
-<body>
-  <div class="tools">
-    <button id="undo">UNDO</button>
-    <button id="redo">REDO</button>
-    <input id="search" type="text" placeholder="Search text...">
-    <button id="previous">Previous</button>
-    <button id="next">Next</button>
-    <input id="replace" type="text" placeholder="Replace text...">
-    <button id="single">Single</button>
-    <button id="all">All</button>
-    <button id="set-content">Set Content</button>
-    <button id="select-all">Select All</button>
-  </div>
-  <div class="editor-container">
-    <div id="editor"></div>
-  </div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Muya Example</title>
+    </head>
+    <body>
+        <div class="tools">
+            <button id="undo">UNDO</button>
+            <button id="redo">REDO</button>
+            <input id="search" type="text" placeholder="Search text..." />
+            <button id="previous">Previous</button>
+            <button id="next">Next</button>
+            <input id="replace" type="text" placeholder="Replace text..." />
+            <button id="single">Single</button>
+            <button id="all">All</button>
+            <button id="set-content">Set Content</button>
+            <button id="select-all">Select All</button>
+            <button id="destroy">Destroy</button>
+        </div>
+        <div class="editor-container">
+            <div id="editor"></div>
+        </div>
+        <script type="module" src="/src/main.ts"></script>
+    </body>
 </html>
