fix: hide inline format toolbar when necessary

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,14 @@
     </head>
     <body>
         <div class="tools">
+            <div class="language-selector">
+                <label for="language-select">Language:</label>
+                <select id="language-select">
+                    <option value="zh">中文</option>
+                    <option value="en">English</option>
+                    <option value="ja">日本語</option>
+                </select>
+            </div>
             <button id="undo">UNDO</button>
             <button id="redo">REDO</button>
             <input id="search" type="text" placeholder="Search text..." />
